--- a/app/index.html
+++ b/app/index.html
@@ -4611,7 +4611,6 @@ Winter Maxwell Thayer
 					<div class="foot"></div>
 				</section>
 
-
 				<section id="practice-setting">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
@@ -4637,7 +4636,6 @@ Winter Maxwell Thayer
 					</aside>
 				</section>
 
-
 				<section id="champion-trial">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
@@ -4653,9 +4651,9 @@ Winter Maxwell Thayer
 					<div class="inSlide">
 						<ul>
 							<p text-align="left">Ongoing at Johns Hopkins University, University of Virginia, and Virginia Commonwealth University<p>
-							<p text-align="left">Testing an interactive decision aid delivered by teams comprised of Community Patient Navigators and nurses</p>
-							<p text-align="left">Planned sample is for 158 dyads</p>
-							<p text-align="left">Primary investigator at Johns Hopkins is Dr. Jennifer Wenzel</p>
+							<p text-align="left">Testing an <span class="highight-yellow">interactive decision aid</span> delivered by Community Patient Navigators and nurses</p>
+							<p text-align="left">Planned sample of 158 dyads</p>
+							<p text-align="left">Primary investigator at Johns Hopkins is <span class="highight-yellow">Dr. Jennifer Wenzel</span></p>
 						</ul>
 					</div>
 					<div class="foot"></div>
@@ -4679,17 +4677,13 @@ Winter Maxwell Thayer
 						Johns Hopkins University School of Nursing
 						</object>
 					</div>
-					<!-- <p class="par-right">Decision process model</p> -->
+					<!-- TRY REMOVING FRAGMENT AND SEE IF THE SLIDE GOES AWAY -->
 					<div class="slide-content fragment fade-out">
-					<!-- <h2>Clinical Trial Decision Making</h2> -->
 							<svg viewBox="0 0 1700 1100" width="100%">
 								<use href="#model-conceptual-theory-and-ethics"></use>
 								<use href="se-model-tilted" style="fill: url(#linear-gradient)"></use>
-								<!-- <use id="with-velocity" xlink:href="info"></use> -->
 							</svg>
-							<!-- <div id="with-velocity" class="box">velocity</div><a id="play-velocity"><span>play</span></a> -->
 					</div>
-
 					<h6>Wenzel et al. 2015</h6>
 					<div class="foot"></div>
 					<aside class="notes">
@@ -4697,7 +4691,7 @@ Winter Maxwell Thayer
 					</aside>
 				</section>
 
-				<section id="middle-range-theory">
+				<section id="theory">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -4709,6 +4703,7 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Grand theory: Social Ecological</h2>
+					<!-- NOT WORKING RIGHT NOW -->
 							<svg class="fragment" data-fragment-index="0" viewBox="0 0 690 690" height="50%">
 								<use xlink:href="#model-se"></use>
 							</svg>
@@ -4731,7 +4726,7 @@ Winter Maxwell Thayer
 					</aside>
 				</section>
 
-				<section id="middle-range-theory">
+				<section id="theory">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -4763,7 +4758,7 @@ Winter Maxwell Thayer
 					</aside>
 				</section>
 
-				<section id="middle-range-theory">
+				<section id="theory">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -4785,7 +4780,7 @@ Winter Maxwell Thayer
 					</aside>
 				</section>
 
-				<section id="middle-range-theory">
+				<section id="theory">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -4808,7 +4803,7 @@ Winter Maxwell Thayer
 					</aside>
 				</section>
 
-				<section id="middle-range-theory">
+				<section id="theory">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -4834,7 +4829,7 @@ Winter Maxwell Thayer
 					</aside>
 				</section>
 
-				<section id="middle-range-theory">
+				<section id="theory">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -4859,7 +4854,7 @@ Winter Maxwell Thayer
 					</aside>
 				</section>
 
-				<section id="middle-range-theory">
+				<section id="theory">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -4885,11 +4880,10 @@ Winter Maxwell Thayer
 					<h6>James (1890); Evans (1984); Kahneman (2003); Evans & Stanovich (2013)</h6>
 					<div class="foot"></div>
 					<aside class="notes">
-
 					</aside>
 				</section>
 
-				<section id="middle-range-theory">
+				<section id="theory">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -4909,15 +4903,13 @@ Winter Maxwell Thayer
 							</svg>
 							<!-- <div id="with-velocity" class="box">velocity</div><a id="play-velocity"><span>play</span></a> -->
 					</div>
-
 					<h6>Hollen et al., 2013</h6>
 					<div class="foot"></div>
 					<aside class="notes">
-
 					</aside>
 				</section>
 
-				<section id="middle-range-theory">
+				<section id="theory">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -4937,18 +4929,18 @@ Winter Maxwell Thayer
 							</svg>
 							<!-- <div id="with-velocity" class="box">velocity</div><a id="play-velocity"><span>play</span></a> -->
 					</div>
-
 					<h6>Wenzel et al. 2015</h6>
 					<div class="foot"></div>
 					<aside class="notes">
 
 					</aside>
 				</section>
-
 				<!-- End verticle theory slides section -->
 				</section>
 
-				<!-- <section id="middle-range-theory">
+				
+
+				<!-- <section id="theory">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -5273,9 +5265,7 @@ Winter Maxwell Thayer
 				<!-- <section> -->
 					<!-- <div id="myBib"></div> -->
 					<!-- <script type="text/javascript">
-
 					</script>
-
 					cite.format('bibliography', {append: ' [foobar]'}) -->
 
 				<!-- </section> -->
