--- a/app/index.html
+++ b/app/index.html
@@ -4978,7 +4978,7 @@ Winter Maxwell Thayer
 					</div>
 					<h2>Discrete Choice Experiments</h2>
 					<div class="inSlide">
-						<img src="/resources/Proposal_Figures_FigureThree_WhiteText.png"></use>
+						<img src="/resources/Proposal_Figures_FigureThree_WhiteText.png"></img>
 					</div>
 					<div class="foot"></div>
 					<aside class="notes">
