--- a/app/index.html
+++ b/app/index.html
@@ -4680,7 +4680,7 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<!-- TRY REMOVING FRAGMENT AND SEE IF THE SLIDE GOES AWAY -->
-					<div class="slide-content fragment">  <!-- took out fade-out here-->
+					<div class="slide-content">  <!-- took out fragment fade-out here-->
 							<svg viewBox="0 0 1700 1100" width="100%">
 								<use href="#model-conceptual-theory-and-ethics"></use>
 								<use href="se-model-tilted" style="fill: url(#linear-gradient)"></use>
@@ -4978,7 +4978,28 @@ Winter Maxwell Thayer
 					</div>
 					<h2>Discrete Choice Experiments</h2>
 					<div class="inSlide">
-						<img src="resources/Proposal_Figures_FigureThree_WhiteText.png" width="500px"></img>
+						<img data-src="resources/Proposal_Figures_FigureThree_WhiteText.png" height="300"></img>
+					</div>
+					<div class="foot"></div>
+					<aside class="notes">
+
+					</aside>
+				</section>
+
+				<section id="methods">
+					<div id="section-header" class="head">
+						<div id="header-left" class="header-left">
+							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+							<p id="outline-progress" class="outline-indicator">Background</p>
+						</div>
+						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+							<param name="src" value="resources/university.shield.large.white.svg">
+						Johns Hopkins University School of Nursing
+						</object>
+					</div>
+					<h2>Discrete Choice Experiments</h2>
+					<div class="inSlide">
+						<img data-src="resources/Proposal_Figures_FigureOne.png" height="300"></img>
 					</div>
 					<div class="foot"></div>
 					<aside class="notes">
