--- a/app/index.html
+++ b/app/index.html
@@ -4965,6 +4965,28 @@ Winter Maxwell Thayer
 					</aside>
 				</section>
 
+
+				<section id="methods">
+					<div id="section-header" class="head">
+						<div id="header-left" class="header-left">
+							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+							<p id="outline-progress" class="outline-indicator">Background</p>
+						</div>
+						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+							<param name="src" value="resources/university.shield.large.white.svg">
+						Johns Hopkins University School of Nursing
+						</object>
+					</div>
+					<h2>Plan</h2>
+					<div class="inSlide">
+						<img data-src="resources/Proposal_Figures_FigureOne_WhiteBG.png" height="450"></img>
+					</div>
+					<div class="foot"></div>
+					<aside class="notes">
+
+					</aside>
+				</section>
+
 				<section id="methods">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
@@ -4986,26 +5008,7 @@ Winter Maxwell Thayer
 					</aside>
 				</section>
 
-				<section id="methods">
-					<div id="section-header" class="head">
-						<div id="header-left" class="header-left">
-							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-							<p id="outline-progress" class="outline-indicator">Background</p>
-						</div>
-						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
-							<param name="src" value="resources/university.shield.large.white.svg">
-						Johns Hopkins University School of Nursing
-						</object>
-					</div>
-					<h2>Discrete Choice Experiments</h2>
-					<div class="inSlide">
-						<img data-src="resources/Proposal_Figures_FigureOne_WhiteBG.png" height="450"></img>
-					</div>
-					<div class="foot"></div>
-					<aside class="notes">
 
-					</aside>
-				</section>
 
 
 				<!-- <section id="theory">
