--- a/app/index.html
+++ b/app/index.html
@@ -4654,7 +4654,7 @@ Winter Maxwell Thayer
 						<ul>
 							<p text-align="left">Ongoing at Johns Hopkins University, University of Virginia, and Virginia Commonwealth University<p>
 							<p text-align="left">Testing an <span class="highight-yellow">interactive decision aid</span> delivered by Community Patient Navigators and nurses</p>
-							<p text-align="left">Planned sample of 158 dyads</p>
+							<p text-align="left">Planned sample of 158 dyads, average 9 month follow-up</p>
 							<p text-align="left">Primary investigator at Johns Hopkins is <span class="highight-yellow">Dr. Jennifer Wenzel</span></p>
 						</ul>
 					</div>
@@ -4970,7 +4970,7 @@ Winter Maxwell Thayer
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-							<p id="outline-progress" class="outline-indicator">Background</p>
+							<p id="outline-progress" class="outline-indicator">Methods</p>
 						</div>
 						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 							<param name="src" value="resources/university.shield.large.white.svg">
@@ -4979,7 +4979,7 @@ Winter Maxwell Thayer
 					</div>
 					<h2>Plan</h2>
 					<div class="inSlide">
-						<img data-src="resources/Proposal_Figures_FigureOne_WhiteBG.png" height="450"></img>
+						<img data-src="resources/Proposal_Figures_FigureOne_WhiteBG.png" height="250"></img>
 					</div>
 					<div class="foot"></div>
 					<aside class="notes">
@@ -4991,7 +4991,7 @@ Winter Maxwell Thayer
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-							<p id="outline-progress" class="outline-indicator">Background</p>
+							<p id="outline-progress" class="outline-indicator">Methods</p>
 						</div>
 						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 							<param name="src" value="resources/university.shield.large.white.svg">
@@ -5008,6 +5008,139 @@ Winter Maxwell Thayer
 					</aside>
 				</section>
 
+				<section id="methods">
+					<div id="section-header" class="head">
+						<div id="header-left" class="header-left">
+							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+							<p id="outline-progress" class="outline-indicator">Methods</p>
+						</div>
+						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+							<param name="src" value="resources/university.shield.large.white.svg">
+						Johns Hopkins University School of Nursing
+						</object>
+					</div>
+					<h2>Aim 1: Methods</h2>
+					<div class="inSlide">
+						<ul>
+							<p text-align="left">Sample 20-25 dyads from the parent trial using maximum variation technique<p>
+							<p text-align="left">Use an interview guide</p>
+							<p text-align="left">Use an elicitation device, either Q sort or abbacus, based on research team judgement</p>
+						</ul>
+					</div>
+					<div class="foot"></div>
+					<aside class="notes">
+
+					</aside>
+				</section>
+
+				<section id="methods">
+					<div id="section-header" class="head">
+						<div id="header-left" class="header-left">
+							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+							<p id="outline-progress" class="outline-indicator">Methods</p>
+						</div>
+						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+							<param name="src" value="resources/university.shield.large.white.svg">
+						Johns Hopkins University School of Nursing
+						</object>
+					</div>
+					<h2>Aim 1: Analysis</h2>
+					<div class="inSlide">
+						<p>Qualitative</p>
+								<ul>
+									<p text-align="left">Transcribe interviews<p>
+									<p text-align="left">Qualitative analysis in two cycles<p>
+									<p text-align="left">Arrange findings into a data matrix<p>
+									<p text-align="left">Use Nvivo software<p>
+								</ul>
+						<p>Quantitative</p>
+						<ul>
+							<p text-align="left">Q sort data: By-person factor analysis</p>
+							<p text-align="left">Abbacus: treat as rating and ranking</p>
+							<p text-align="left">Use R language</p>
+						</ul>
+					</div>
+					<div class="foot"></div>
+					<aside class="notes">
+
+					</aside>
+				</section>
+
+				<section id="methods">
+					<div id="section-header" class="head">
+						<div id="header-left" class="header-left">
+							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+							<p id="outline-progress" class="outline-indicator">Methods</p>
+						</div>
+						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+							<param name="src" value="resources/university.shield.large.white.svg">
+						Johns Hopkins University School of Nursing
+						</object>
+					</div>
+					<h2>Aim 2: Methods</h2>
+					<div class="inSlide">
+						<p>Sample 10-13 dyads</p>
+						<p>Cognitive interviews</p>
+						<p>Discrete-choice experiment</p>
+					</div>
+					<div class="foot"></div>
+					<aside class="notes">
+
+					</aside>
+				</section>
+
+				<section id="methods">
+					<div id="section-header" class="head">
+						<div id="header-left" class="header-left">
+							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+							<p id="outline-progress" class="outline-indicator">Methods</p>
+						</div>
+						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+							<param name="src" value="resources/university.shield.large.white.svg">
+						Johns Hopkins University School of Nursing
+						</object>
+					</div>
+					<h2>Aim 2: Analysis</h2>
+					<div class="inSlide">
+						<p>Qualitative</p>
+								<ul>
+									<p text-align="left">Analyze field notes and recordings<p>
+								</ul>
+						<p>Quantitative</p>
+						<ul>
+							<p text-align="left">Preliminary conditional logistic regression</p>
+							<p text-align="left">Use R language</p>
+						</ul>
+					</div>
+					<div class="foot"></div>
+					<aside class="notes">
+
+					</aside>
+				</section>
+
+				<section id="methods">
+					<div id="section-header" class="head">
+						<div id="header-left" class="header-left">
+							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+							<p id="outline-progress" class="outline-indicator">Methods</p>
+						</div>
+						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+							<param name="src" value="resources/university.shield.large.white.svg">
+						Johns Hopkins University School of Nursing
+						</object>
+					</div>
+					<h2>Limitations</h2>
+					<div class="inSlide">
+						<p></p>
+						<ul>
+							<p text-align="left"><p>
+						</ul>
+					</div>
+					<div class="foot"></div>
+					<aside class="notes">
+
+					</aside>
+				</section>
 
 
 
