--- a/app/index.html
+++ b/app/index.html
@@ -4359,7 +4359,8 @@ Winter Maxwell Thayer
 						Johns Hopkins University School of Nursing
 						</object>
 					</div>
-					<p class="slide-content">An estimated <span class="highlight-yellow">174,650 cases</span> of prostate cancer will be diagnosed in 2019.</p>
+					<!-- !!CHECK IF STILL ACCURATE!! -->
+					<p class="slide-content">An estimated <span class="highlight-yellow">174,650 cases</span> of prostate cancer were diagnosed in 2019.</p>
 					<p class="slide-content">Out of every 100 cancers</p>
 					<ul>
 						<p><span class="highlight-yellow">77</span> will be confined to the prostate</p>
@@ -4652,9 +4653,9 @@ Winter Maxwell Thayer
 					<h2>CHAMPION</h2>
 					<div class="inSlide">
 						<ul>
-							<p text-align="left">Ongoing at Johns Hopkins University, University of Virginia, and Virginia Commonwealth University<p>
-							<p text-align="left">Testing an <span class="highight-yellow">interactive decision aid</span> delivered by Community Patient Navigators and nurses</p>
-							<p text-align="left">Planned sample of 158 dyads, average 9 month follow-up</p>
+							<p text-align="left">Ongoing at Johns Hopkins, University of Virginia, and Virginia Commonwealth University<p>
+							<p text-align="left">Testing an <span class="highight-yellow">interactive decision aid</span> delivered by community patient navigators and nurses</p>
+							<p text-align="left">Planned sample of 158 dyads, 9 month follow-up</p>
 							<p text-align="left">Primary investigator at Johns Hopkins is <span class="highight-yellow">Dr. Jennifer Wenzel</span></p>
 						</ul>
 					</div>
@@ -5024,7 +5025,7 @@ Winter Maxwell Thayer
 						<ul>
 							<p text-align="left">Sample 20-25 dyads from the parent trial using maximum variation technique<p>
 							<p text-align="left">Use an interview guide</p>
-							<p text-align="left">Use an elicitation device, either Q sort or abbacus, based on research team judgement</p>
+							<p text-align="left">Use an elicitation device, either Q sort or abacus, based on research team judgement</p>
 						</ul>
 					</div>
 					<div class="foot"></div>
@@ -5056,7 +5057,7 @@ Winter Maxwell Thayer
 						<p>Quantitative</p>
 						<ul>
 							<p text-align="left">Q sort data: By-person factor analysis</p>
-							<p text-align="left">Abbacus: treat as rating and ranking</p>
+							<p text-align="left">Abacus: treat as rating and ranking</p>
 							<p text-align="left">Use R language</p>
 						</ul>
 					</div>
@@ -5101,15 +5102,15 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Aim 2: Analysis</h2>
+					<p>Qualitative</p>
 					<div class="inSlide">
-						<p>Qualitative</p>
-								<ul>
-									<p text-align="left">Analyze field notes and recordings<p>
-								</ul>
+							<ul>
+								<p text-align="left">Analyze field notes and recordings<p>
+							</ul>
+						</div>
 						<p>Quantitative</p>
 						<ul>
-							<p text-align="left">Preliminary conditional logistic regression</p>
-							<p text-align="left">Use R language</p>
+							<p text-align="left">Preliminary conditional logistic regression with R language</p>
 						</ul>
 					</div>
 					<div class="foot"></div>
