--- a/app/index.html
+++ b/app/index.html
@@ -4312,7 +4312,7 @@ Winter Maxwell Thayer
 					<div class="inSlide" height="100%">
 						<h5>Background</h5>
 						<h5></h5>
-						<h5>CHAMPION Trial</h5>
+						<h5>R01 clinical trial context: Cancer Health Aid to Manage Preferences and Improve Outcomes through Navigation (<span class=highlight-yellow>CHAMPION</span>)</h5>
 						<h5></h5>
 						<h5>Methods</h5>
 					</div>
@@ -4957,7 +4957,7 @@ Winter Maxwell Thayer
 						<ul>
 							<p text-align="left">1. Explore the processes and mechanisms through which decision partners support decision making<p>
 							<p text-align="left"></p>
-							<p text-align="left">2. Develop and pilot a discrete choice experiment that measures preferences for palliative anti-cancer treatmment</p>
+							<p text-align="left">2. Develop and pilot a discrete choice experiment that measures preferences for palliative anti-cancer treatment</p>
 						</ul>
 					</div>
 					<div class="foot"></div>
@@ -5046,7 +5046,6 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Aim 1: Analysis</h2>
-					<div class="inSlide">
 						<p>Qualitative</p>
 								<ul>
 									<p text-align="left">Transcribe interviews<p>
@@ -5054,13 +5053,30 @@ Winter Maxwell Thayer
 									<p text-align="left">Arrange findings into a data matrix<p>
 									<p text-align="left">Use Nvivo software<p>
 								</ul>
+					<div class="foot"></div>
+					<aside class="notes">
+
+					</aside>
+				</section>
+
+				<section id="methods">
+					<div id="section-header" class="head">
+						<div id="header-left" class="header-left">
+							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+							<p id="outline-progress" class="outline-indicator">Methods</p>
+						</div>
+						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+							<param name="src" value="resources/university.shield.large.white.svg">
+						Johns Hopkins University School of Nursing
+						</object>
+					</div>
+					<h2>Aim 1: Analysis</h2>
 						<p>Quantitative</p>
 						<ul>
 							<p text-align="left">Q sort data: By-person factor analysis</p>
 							<p text-align="left">Abacus: treat as rating and ranking</p>
 							<p text-align="left">Use R language</p>
 						</ul>
-					</div>
 					<div class="foot"></div>
 					<aside class="notes">
 
@@ -5079,11 +5095,9 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Aim 2: Methods</h2>
-					<div class="inSlide">
 						<p>Sample 10-13 dyads</p>
 						<p>Cognitive interviews</p>
 						<p>Discrete-choice experiment</p>
-					</div>
 					<div class="foot"></div>
 					<aside class="notes">
 
@@ -5102,16 +5116,17 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Aim 2: Analysis</h2>
-					<div class="inSlide">
-						<p>Qualitative</p>
-								<ul>
-									<p text-align="left">Analyze field notes and recordings<p>
-								</ul>
+					<p>Qualitative</p>
+
+							<ul>
+								<p text-align="left">Analyze field notes and recordings<p>
+							</ul>
+
 						<p>Quantitative</p>
 						<ul>
 							<p text-align="left">Preliminary conditional logistic regression with R language</p>
 						</ul>
-					</div>
+
 					<div class="foot"></div>
 					<aside class="notes">
 
@@ -5130,12 +5145,9 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Limitations</h2>
-					<div class="inSlide">
-						<p></p>
-						<ul>
-							<p text-align="left"><p>
-						</ul>
-					</div>
+
+						<p>Sample size</p>
+						<p>Dyads vs. Single patients</p>
 					<div class="foot"></div>
 					<aside class="notes">
 
