--- a/app/index.html
+++ b/app/index.html
@@ -4988,25 +4988,48 @@ Winter Maxwell Thayer
 					</aside>
 				</section>
 
-				<section id="methods">
-					<div id="section-header" class="head">
-						<div id="header-left" class="header-left">
-							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-							<p id="outline-progress" class="outline-indicator">Methods</p>
+				<section id="vertical-2">
+					<section id="methods">
+						<div id="section-header" class="head">
+							<div id="header-left" class="header-left">
+								<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+								<p id="outline-progress" class="outline-indicator">Methods</p>
+							</div>
+							<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+								<param name="src" value="resources/university.shield.large.white.svg">
+							Johns Hopkins University School of Nursing
+							</object>
 						</div>
-						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
-							<param name="src" value="resources/university.shield.large.white.svg">
-						Johns Hopkins University School of Nursing
-						</object>
-					</div>
-					<h2>Discrete Choice Experiments</h2>
-					<div class="inSlide">
-						<img data-src="resources/Proposal_Figures_FigureThree_WhiteText.png" height="450"></img>
-					</div>
-					<div class="foot"></div>
-					<aside class="notes">
+						<h2>Discrete Choice Experiments</h2>
+						<div class="inSlide">
+							<img data-src="resources/Proposal_Figures_FigureThree_WhiteText.png" height="450"></img>
+						</div>
+						<div class="foot"></div>
+						<aside class="notes">
 
-					</aside>
+						</aside>
+					</section>
+
+					<section id="methods">
+						<div id="section-header" class="head">
+							<div id="header-left" class="header-left">
+								<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+								<p id="outline-progress" class="outline-indicator">Methods</p>
+							</div>
+							<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+								<param name="src" value="resources/university.shield.large.white.svg">
+							Johns Hopkins University School of Nursing
+							</object>
+						</div>
+						<h2>Discrete Choice Experiments</h2>
+						<div class="inSlide">
+							<img data-src="resources/Proposal_Figures_FigureThree_WhiteText_t2.png" height="450"></img>
+						</div>
+						<div class="foot"></div>
+						<aside class="notes">
+
+						</aside>
+					</section>
 				</section>
 
 				<section id="methods">
@@ -5071,11 +5094,11 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Aim 1: Analysis</h2>
-						<p>Quantitative</p>
+						<p text-align="left">Quantitative</p>
 						<ul>
 							<p text-align="left">Q sort data: By-person factor analysis</p>
 							<p text-align="left">Abacus: treat as rating and ranking</p>
-							<p text-align="left">Use R language</p>
+							<p text-align="left">Describe using R language</p>
 						</ul>
 					<div class="foot"></div>
 					<aside class="notes">
@@ -5095,9 +5118,9 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Aim 2: Methods</h2>
-						<p>Sample 10-13 dyads</p>
-						<p>Cognitive interviews</p>
-						<p>Discrete-choice experiment</p>
+						<p text-align="left">Sample 10-13 dyads</p>
+						<p text-align="left">Cognitive interviews</p>
+						<p text-align="left">Discrete-choice experiment</p>
 					<div class="foot"></div>
 					<aside class="notes">
 
@@ -5116,13 +5139,13 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Aim 2: Analysis</h2>
-					<p>Qualitative</p>
+					<p text-align="left">Qualitative</p>
 
 							<ul>
 								<p text-align="left">Analyze field notes and recordings<p>
 							</ul>
 
-						<p>Quantitative</p>
+						<p text-align="left">Quantitative</p>
 						<ul>
 							<p text-align="left">Preliminary conditional logistic regression with R language</p>
 						</ul>
@@ -5145,9 +5168,9 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Limitations</h2>
-
 						<p>Sample size</p>
 						<p>Dyads vs. Single patients</p>
+
 					<div class="foot"></div>
 					<aside class="notes">
 
