--- a/app/index.html
+++ b/app/index.html
@@ -5140,11 +5140,9 @@ Winter Maxwell Thayer
 					</div>
 					<h2>Aim 2: Analysis</h2>
 					<p text-align="left">Qualitative</p>
-
 							<ul>
 								<p text-align="left">Analyze field notes and recordings<p>
 							</ul>
-
 						<p text-align="left">Quantitative</p>
 						<ul>
 							<p text-align="left">Preliminary conditional logistic regression with R language</p>
@@ -5168,8 +5166,8 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Limitations</h2>
-						<p>Sample size</p>
-						<p>Dyads vs. Single patients</p>
+						<p text-align="left">Sample size</p>
+						<p text-align="left">Dyads vs. single patients</p>
 
 					<div class="foot"></div>
 					<aside class="notes">
