--- a/app/index.html
+++ b/app/index.html
@@ -4654,9 +4654,9 @@ Winter Maxwell Thayer
 					<div class="inSlide">
 						<ul>
 							<p text-align="left">Ongoing at Johns Hopkins, University of Virginia, and Virginia Commonwealth University<p>
-							<p text-align="left">Testing an <span class="highight-yellow">interactive decision aid</span> delivered by community patient navigators and nurses</p>
-							<p text-align="left">Planned sample of 158 dyads, 9 month follow-up</p>
-							<p text-align="left">Primary investigator at Johns Hopkins is <span class="highight-yellow">Dr. Jennifer Wenzel</span></p>
+							<p text-align="left">Testing an <span class="highlight-yellow">interactive decision aid</span> delivered by community patient navigators and nurses</p>
+							<p text-align="left">Planned sample of 158 dyads, <span class="highlight-yellow">9 month</span> follow-up</p>
+							<p text-align="left">Primary investigator at Johns Hopkins is Dr. Jennifer Wenzel</p>
 						</ul>
 					</div>
 					<div class="foot"></div>
