--- a/app/index.html
+++ b/app/index.html
@@ -5166,8 +5166,8 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Limitations</h2>
-						<p text-align="left">Sample size</p>
-						<p text-align="left">Dyads vs. single patients</p>
+						<p class="slide-content">Sample size</p>
+						<p class="slide-content">Dyads vs. single patients</p>
 
 					<div class="foot"></div>
 					<aside class="notes">
