--- a/app/index.html
+++ b/app/index.html
@@ -5094,11 +5094,11 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Aim 1: Analysis</h2>
-						<p text-align="left">Quantitative</p>
+						<p class="slide-content">Quantitative</p>
 						<ul>
-							<p text-align="left">Q sort data: By-person factor analysis</p>
-							<p text-align="left">Abacus: treat as rating and ranking</p>
-							<p text-align="left">Describe using R language</p>
+							<p>Q sort data: By-person factor analysis</p>
+							<p>Abacus: treat as rating and ranking</p>
+							<p>Describe using R language</p>
 						</ul>
 					<div class="foot"></div>
 					<aside class="notes">
@@ -5118,9 +5118,9 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Aim 2: Methods</h2>
-						<p text-align="left">Sample 10-13 dyads</p>
-						<p text-align="left">Cognitive interviews</p>
-						<p text-align="left">Discrete-choice experiment</p>
+						<p class="slide-content">Sample 10-13 dyads</p>
+						<p class="slide-content">Cognitive interviews</p>
+						<p class="slide-content">Discrete-choice experiment</p>
 					<div class="foot"></div>
 					<aside class="notes">
 
@@ -5139,13 +5139,13 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Aim 2: Analysis</h2>
-					<p text-align="left">Qualitative</p>
+					<p class="slide-content">Qualitative</p>
 							<ul>
-								<p text-align="left">Analyze field notes and recordings<p>
+								<p>Analyze field notes and recordings<p>
 							</ul>
-						<p text-align="left">Quantitative</p>
+						<p class="slide-content">Quantitative</p>
 						<ul>
-							<p text-align="left">Preliminary conditional logistic regression with R language</p>
+							<p>Preliminary conditional logistic regression with R language</p>
 						</ul>
 
 					<div class="foot"></div>
