--- a/app/index.html
+++ b/app/index.html
@@ -5069,7 +5069,7 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Aim 1: Analysis</h2>
-						<p>Qualitative</p>
+						<p class="slide-content">Qualitative</p>
 								<ul>
 									<p text-align="left">Transcribe interviews<p>
 									<p text-align="left">Qualitative analysis in two cycles<p>
