Start Preliminary Oral Exam Presentation

--- a/app/index.html
+++ b/app/index.html
@@ -4281,7 +4281,7 @@ Winter Maxwell Thayer
 					<p id="today"></p>
 				</section>
 
-				<!-- Use background-clip to bound the logo somehow-->
+				<!-- Use background-clip to bound the logo somehow? no-->
 				<section id="outline">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
@@ -4294,21 +4294,6 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Outline</h2>
-					<!-- <div class="inSlide" height="100%">
-						<h5>Background</h5>
-						<ul>
-							<p>Prostate Cancer</p>
-							<p>Treatment Decision Making</p>
-							<p>CHAMPION Randomized Clinical Trial</p>
-							<p>Utility Theory</p>
-						</ul>
-						<h5>Methods</h5>
-						<ul>
-							<p>Instrument Development</p>
-							<p>DCE Development</p>
-							<p>Analysis and evaluation</p>
-						</ul>
-					</div> -->
 					<div class="inSlide" height="100%">
 						<h5>Background</h5>
 						<h5></h5>
@@ -4322,6 +4307,23 @@ Winter Maxwell Thayer
 						clinical trial in which this proposal is nested, and then I will
 						outline the proposed methods.
 					</aside>
+				</section>
+
+
+				<section id="decision-making">
+					<div id="section-header" class="head">
+						<div id="header-left" class="header-left">
+							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+							<p id="outline-progress" class="outline-indicator">Background</p>
+						</div>
+						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+							<param name="src" value="resources/university.shield.large.white.svg">
+								Johns Hopkins University School of Nursing
+						</object>
+					</div>
+					<p class="slide-content">Choices involve <span class="highlight-yellow">trade-offs</span></p>
+						<div>
+					<div class="foot"></div>
 				</section>
 
 
@@ -4400,7 +4402,7 @@ Winter Maxwell Thayer
 					<div class="foot"></div>
 				</section>
 
-				<section id="practice-setting">
+				<!-- <section id="practice-setting">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -4419,11 +4421,11 @@ Winter Maxwell Thayer
 					</ul>
 					<h6>Mohler et al., 2019</h6>
 					<div class="foot"></div>
-				</section>
+				</section> -->
 
 
 
-				<section id="practice-setting">
+				<!-- <section id="practice-setting">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -4439,9 +4441,7 @@ Winter Maxwell Thayer
 					  <svg viewBox="0 0 360 432" height=175 style="padding-right: 50px;">
 							<use xlink:href="#radiation" class="treatment-symbol"></use>
 						</svg>
-						<!-- <svg viewBox="0 0 360 432" height=175 style="padding-right: 25px;">
-							<use xlink:href="#scalpel" class="treatment-symbol"></use>
-						</svg> -->
+
 						<svg viewBox="0 0 360 432" height="175">
 							<use xlink:href="#pill-symbol" class="treatment-symbol" ></use>
 						</svg>
@@ -4451,7 +4451,7 @@ Winter Maxwell Thayer
 					</div>
 					<h6>Mohler et al., 2019</h6>
 					<div class="foot"></div>
-				</section>
+				</section> -->
 
 				<section id="practice-setting">
 					<div id="section-header" class="head">
@@ -4465,7 +4465,7 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<div class="slide-content">
-						<p>When cancer</p>
+						<p>When metastatic cancer</p>
 						<ul>
 							<p><span class="highlight-yellow">does not respond</span> to initial treatment,</p>
 							<p><span class="highlight-yellow">recurs</span>, or
@@ -4569,7 +4569,7 @@ Winter Maxwell Thayer
 					<div class="foot"></div>
 				</section>
 
-				<section id="practice-setting">
+				<!-- <section id="practice-setting">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -4589,7 +4589,7 @@ Winter Maxwell Thayer
 						</ul>
 					</div>
 					<div class="foot"></div>
-				</section>
+				</section> -->
 
 				<section id="practice-setting">
 					<div id="section-header" class="head">
