--- a/app/index.html
+++ b/app/index.html
@@ -4269,7 +4269,7 @@ Winter Maxwell Thayer
 
 
 <!-- Hippocrates -->
-<svg id="hippocrates" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 127.06 164.43">
+<svg id="hippocrates" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 127.06 164.43" style="display: none;">
   <defs>
     <style>
       .cls-1 {
