edited quant analysis, palliative decision making

--- a/app/index.html
+++ b/app/index.html
@@ -8724,6 +8724,22 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 					</aside>
 				</section>
 
+				<section id="decision-making-framework">
+					<div id="section-header" class="head">
+						<div id="header-left" class="header-left">
+							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+							<p id="outline-progress" class="outline-indicator">Background</p>
+						</div>
+						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+							<param name="src" value="resources/university.shield.large.white.svg">
+								Johns Hopkins University School of Nursing
+						</object>
+					</div>
+					<h2></h2>
+					<p class="slide-content"></p>
+					<div class="foot">nursing.jhu.edu</div>
+				</section>
+
 				<section id="decision-making-palliative">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
@@ -8736,14 +8752,15 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 						</object>
 					</div>
 					<h2>Proxy medical decision-making steps</h2>
-					<blockquote class="inSlide">
+					<p "inSlide">From the American Bar Association guide for proxies</p>
+					<small><blockquote class="inSlide">
 						<ol>
-							<li class="de-emphasize">Find out medical facts</li>
-							<li class="de-emphasize">Find out options</li>
+							<li class="">Find out medical facts</li>
+							<li class="">Find out options</li>
 							<li class="de-emphasize">Figure out <span class="highlight-yellow">how the patient would decide</span> if he or she could</p>
 							<li class="de-emphasize">If you don't know, choose what is in the patient's best interests</li>
-							<small><p><strong>What would the patient want?</strong> The aim is to choose as the patient would probably choose, <strong><em>even if it is not what you would choose for yourself.</em></strong> (emphasis in original)</p></small>
-						</ol>
+							<p><strong>What would the patient want?</strong> The aim is to choose as the patient would probably choose, <strong><em>even if it is not what you would choose for yourself.</em></strong> (emphasis in original)</p><
+						</ol></small>
 					</blockquote>
 					<h6>quoted from the American Bar Association, 2015, pp. 5-6</h6>
 					<div class="foot">nursing.jhu.edu</div>
@@ -9615,16 +9632,16 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 						Johns Hopkins University School of Nursing
 						</object>
 					</div>
-					<h2>Aim 2: Analysis</h2>
-						<p class="slide-content">Quantitative</p>
-						<p class="slide-content">
+					<h2>Aim 2: Quantitative Analysis</h2>
+						<!-- <p class="slide-content"> -->
+						<p class="inSlide slide-content">
 						A 'simplistic' analysis: count the number of times each level of each
 						attribute was chosen by each respondent, sum this total for all
 						resondents, and divide by the total number of times it was shown.
 
 						<!-- MAKE THIS A BLUR IN -->
 						As in, let $S$ be the score for level $j$ of attribute $k$ among the
-						$n$ respondents shown $t$ tasks and asked make $C$ choice among $O$
+						$n$ respondents shown $t$ tasks and asked to make $C$ choice among $O$
 						options.
 
 						$$ S_{kj} = \frac{\sum_{n=1}^N \sum_{t=1}^T C \in O_{kj}=1} {\sum_{n=1}^N \sum_{t=1}^T O_{kj}=1} $$
