edited on Lenovo, minor changes

--- a/app/index.html
+++ b/app/index.html
@@ -8735,10 +8735,32 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 								Johns Hopkins University School of Nursing
 						</object>
 					</div>
-					<h2></h2>
-					<p class="slide-content"></p>
+					<h2>Palliative Decision Making</h2>
+					<p class="slide-content">Advance directives tend to focus on clarifying the patient's willingness to consent to currently available treatments</p>
+					<p class="slide-content">They do not address treatment decisions patients face prior to the need for interventions like nutritional support</p>
+					<p class="slide-content">They address acute changes in cognitive capacity, but are not well suited to the more subtle changes that may occur in cancer patients, including a gradual shift of responsibilities to a decision parter, 'chemo brain,' and others</p>
 					<div class="foot">nursing.jhu.edu</div>
 				</section>
+
+
+				<section id="decision-making-framework">
+					<div id="section-header" class="head">
+						<div id="header-left" class="header-left">
+							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+							<p id="outline-progress" class="outline-indicator">Background</p>
+						</div>
+						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+							<param name="src" value="resources/university.shield.large.white.svg">
+								Johns Hopkins University School of Nursing
+						</object>
+					</div>
+					<h2>Palliative Decision Making</h2>
+					<p class="slide-content">Advance directives tend to focus on clarifying the patient's willingness to consent to currently available treatments</p>
+					<p class="slide-content">They do not address treatment decisions patients face prior to the need for interventions like nutritional support</p>
+					<p class="slide-content">They address acute changes in cognitive capacity, but are not well suited to the more subtle changes that may occur in cancer patients, including a gradual shift of responsibilities to a decision parter, 'chemo brain,' and others</p>
+					<div class="foot">nursing.jhu.edu</div>
+				</section>
+
 
 				<section id="decision-making-palliative">
 					<div id="section-header" class="head">
@@ -8757,7 +8779,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 						<ol>
 							<li class="">Find out medical facts</li>
 							<li class="">Find out options</li>
-							<li class="de-emphasize">Figure out <span class="highlight-yellow">how the patient would decide</span> if he or she could</p>
+							<li class="">Figure out <span class="highlight-yellow">how the patient would decide</span> if he or she could</p>
 							<li class="de-emphasize">If you don't know, choose what is in the patient's best interests</li>
 							<p><strong>What would the patient want?</strong> The aim is to choose as the patient would probably choose, <strong><em>even if it is not what you would choose for yourself.</em></strong> (emphasis in original)</p><
 						</ol></small>
