--- a/app/index.html
+++ b/app/index.html
@@ -8712,15 +8712,6 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 	        font-family: ArialMT, Arial;
 	      }
 
-	      .cls-2 {
-	        letter-spacing: -0.07em;
-	      }
-
-	      .cls-3 {
-	        font-family: Arial-BoldMT, Arial;
-	        font-weight: 300;
-	      }
-
 	      .cls-4 {
 	        letter-spacing: -0.06em;
 	      }
@@ -8930,7 +8921,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 			</section> -->
 
 			<!-- Palliative decision making slide -->
-			<section id="decision-making-palliative">
+			<section id="palliative">
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -8960,7 +8951,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 
 
 			<!-- Decision partners -->
-			<section id="decision-partners">
+			<section id="dpp">
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -8974,14 +8965,14 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<h2>Ideal decision partners</h2>
 				<div class="inSlide">
 					<ol class="slide-content">
-						<li>Relationship with patient</li>
-						<li>Willing to fill supportive roles</li>
-						<li>Willing to participate in decision making</li>
-						<li>Emotional capacity to participate</li>
-						<li>Understands patient’s condition</li>
-						<li>Demonstrates self-efficacy</li>
+						<li class="eighty-five">Relationship with patient</li>
+						<li class="eighty-five">Willing to fill supportive roles</li>
+						<li class="eighty-five">Willing to participate in decision making</li>
+						<li class="eighty-five">Emotional capacity to participate</li>
+						<li class="eighty-five">Understands patient’s condition</li>
+						<li class="eighty-five">Demonstrates self-efficacy</li>
 					</ol>
-					<p class="slide-content">The processes and mechansims decision partners use to aid decision making are not well understood</p>
+					<p class="slide-content"><em>The processes and mechanisms decision partners use to support patient decision making are not well understood</em></p>
 				</div>
 				<h6>Gray et al., 2019; Zeliadt et al., 2011</h6>
 				<p class="current-slide-number"></p>
@@ -8992,31 +8983,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 			</section>
 
 
-			<!-- <section id="practice-setting">
-				<div id="section-header" class="head">
-					<div id="header-left" class="header-left">
-						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-						<p id="outline-progress" class="outline-indicator">Background</p>
-					</div>
-					<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
-						<param name="src" value="resources/university.shield.large.white.svg">
-					Johns Hopkins University School of Nursing
-					</object>
-				</div>
-
-				<p class="slide-content">An estimated <span class="highlight-yellow">174,650 cases</span> of prostate cancer were diagnosed in 2019.</p>
-				<p class="slide-content">Out of every 100 cancers</p>
-				<ul>
-					<p><span class="highlight-yellow">77</span> will be confined to the prostate</p>
-					<p><span class="highlight-yellow">13</span> will have spread to nearby lymph nodes</p>
-					<p><span class="highlight-yellow">6</span>  will have metastasized elsewhere in the body</p>
-				</ul>
-				<h6>Howlader et al., 2019</h6>
-				<p class="current-slide-number"></p>
-				<div class="foot">nursing.jhu.edu</div>
-			</section> -->
-
-			<section id="practice-setting">
+			<section id="pca">
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -9029,12 +8996,40 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				</div>
 				<h2>Prostate cancer</h2>
 				<div class="inSlide">
-					<p class="slide-content">An estimated <span class="highlight-yellow">174,650 cases</span> of prostate cancer were diagnosed in 2019</p>
-					<p class="slide-content">Almost all patients with local or regional disease <span class="highlight-yellow">survive at least five years</span></p>
+					<p class="slide-content">An estimated <span class="highlight-yellow">174,650 incident cases</span> in 2019</p>
+					<p class="slide-content">Out of every 100 cancers</p>
+					<ul>
+						<p><span class="highlight-yellow">77</span> will be confined to the prostate</p>
+						<p><span class="highlight-yellow">13</span> will have spread to nearby lymph nodes</p>
+						<p><span class="highlight-yellow">6</span>  will have metastasized elsewhere in the body</p>
+					</ul>
+					<p class="slide-content"><em>Only 1/3 patients with metastases survive 5 years</em></p>
+				</div>
+				<h6>Howlader et al., 2019</h6>
+				<p class="current-slide-number"></p>
+				<div class="foot">nursing.jhu.edu</div>
+			</section>
 
+			<!-- <section id="pca-2">
+				<div id="section-header" class="head">
+					<div id="header-left" class="header-left">
+						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+						<p id="outline-progress" class="outline-indicator">Background</p>
+					</div>
+					<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+						<param name="src" value="resources/university.shield.large.white.svg">
+					Johns Hopkins University School of Nursing
+					</object>
+				</div>
+				<h2>Prostate cancer</h2>
+				<div class="inSlide">
+					<p class="slide-content">An estimated <span class="highlight-yellow">174,650 cases</span> diagnosed in 2019</p>
+					<p class="slide-content">Only about <span class="highlight-yellow">one in three</span> patients diagnosed with metastatic disease <span class="highlight-yellow">survive five years</span></p>
+					<p class="slide-content">Patients and their decision partners face multiple palliative treatment decisions with uncertain outcomes</p>
+				</div> -->
 				<!-- <p class="slide-content fragment fade-in">Only 1/3 of patients with distant metastases are alive after five years</p> -->
 
-				<div data-fragment-index="0">
+				<!-- <div data-fragment-index="0">
 					<svg class="men fragment fade-out"  viewBox="0 50 40 50" width="150" preseverAspectRatio="xMidYMid meet">
 						<use xlink:href="#manZero" class="man-zero"></use>
 					</svg>
@@ -9045,11 +9040,11 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 						<use xlink:href="#manZero" class="man-zero"></use>
 					</svg>
 					</div>
-				</div>
-				<h6>Howlader et al., 2019</h6>
+				</div> -->
+				<!-- <h6>Howlader et al., 2019</h6>
 				<p class="current-slide-number"></p>
 				<div class="foot">nursing.jhu.edu</div>
-			</section>
+			</section> -->
 
 
 
@@ -9092,7 +9087,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<div class="foot">nursing.jhu.edu</div>
 			</section> -->
 
-			<section id="utility-1">
+			<section id="utility">
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -9104,18 +9099,19 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 					</object>
 				</div>
 				<h2>Utility Theory</h2>
-					<p>Choices involve <span class="highlight-yellow">trade offs</span></p>
-						<svg height="30%" style="position: absolute;left: 3%;" viewBox="0 0 410 410">
+						<p id="para-choices">Choices involve <span class="highlight-yellow">trade offs</span></p>
+						<p id="para-utility">Utility is satisfaction derived from an experience</p>
+						<p id="para-theory"><em>Provides a conceptual and mathematical framework for this study</em></p>
+						<svg height="25%" style="position: absolute;left: 25%;" viewBox="0 0 410 410">
 							<use xlink:href="#box-utility"></use>
 						</svg>
-						<svg width="55%" style="position: absolute;left: 25%; top: 23%;" viewBox="0 0 740.54 162.42">
+						<svg width="45%" style="position: absolute;left: 38%; top: 23%;" viewBox="0 0 740.54 162.42">
 							<use xlink:href="#arrow-curved"></use>
 						</svg>
-						<p id="para-utility">Satisfaction derived from an experience</p>
-						<svg width="55%" style="position: absolute;left: 25%; bottom: 18%;" viewBox="0 0 740.54 162.42" transform="rotate(180)">
+						<svg width="45%" style="position: absolute;left: 38%; bottom: 18%;" viewBox="0 0 740.54 162.42" transform="rotate(180)">
 							<use xlink:href="#arrow-curved"></use>
 						</svg>
-						<svg height="30%" style="position: absolute;right: 3%;" viewBox="0 0 410 410">
+						<svg height="25%" style="position: absolute;right: 3%;" viewBox="0 0 410 410">
 							<use xlink:href="#box-behavior"></use>
 						</svg>
 				<h6>Samuelson (1938)</h6>
@@ -9126,7 +9122,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				</aside>
 			</section>
 
-			<section id="utility-2">
+			<!-- <section id="utility-2">
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -9147,7 +9143,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<aside class="notes">
 
 				</aside>
-			</section>
+			</section> -->
 
 			<!-- <section id="utility-one-to-n">
 				<div id="section-header" class="head">
@@ -9227,13 +9223,14 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				</div>
 				<h2>Purpose</h2>
 				<div class="inSlide">
-					<p class="slide-content">To address a literature gap by characterizing the processes and mechanisms through which decision partners contribute to palliative anti-cancer treatment decision making</p>
-					<p class="slide-content">To develop a tool to quantify patient preferences for palliative anti-cancer treatment</p>
+					<p class="slide-content">To <span class="highlight-yellow">address an evidence gap</span> by characterizing the processes and mechanisms through which decision partners contribute on behalf of patients palliative anti-cancer treatment decision making</p>
+					<br>
+					<p class="slide-content">To <span class="highlight-yellow">develop a tool</span> informed by utility theory to quantify patient preferences for palliative anti-cancer treatment</p>
 				</div>
 				<p class="current-slide-number"></p>
 				<div class="foot">nursing.jhu.edu</div>
 				<aside class="notes">
-					This brings us to the imperative for our research. If we're going to do useful research, it's probably useful to have a theory about what is actually happening when people make these decisions.
+
 				</aside>
 			</section>
 
@@ -9256,7 +9253,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 						<li>Develop and pilot a <span class="highlight-yellow">discrete choice experiment</span> that measures preferences for palliative anti-cancer treatment</p>
 					</ul>
 					<br>
-					<p>This research will be conducted within an ongoing randomized trial of a decision aid</p>
+					<p><em>This research will be conducted within an ongoing randomized trial of a decision aid</em></p>
 				</div>
 				<p class="current-slide-number"></p>
 				<div class="foot">nursing.jhu.edu</div>
@@ -9265,7 +9262,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 
 
 
-			<section id="champion-1">
+			<section id="champion">
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -9276,7 +9273,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 					Johns Hopkins University School of Nursing
 					</object>
 				</div>
-				<h2>CHAMPION: Aims and sample</h2>
+				<h2>CHAMPION: Purpose and sample</h2>
 				<p class="slide-content">Cancer Health Aid to Manage Preferences and Improve Outcomes through Navigation (<span class="highlight-yellow">CHAMPION</span>)</p>
 				<p class="slide-content">Testing an <span class="highlight-yellow">interactive decision aid</span> delivered by community patient navigators-nurse teams</p>
 				<p class="slide-content">Planned sample of 158 dyads, <span class="highlight-yellow">9 month</span> follow-up</p>
@@ -9301,9 +9298,24 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 					</object>
 				</div>
 				<h2>Study flow</h2>
+				<div class="inSlide">
+					<p class="slide-content">Inclusion:</p>
+					<ul class="eighty-five">
+						<li>Age &ge; 18 years</li>
+						<li>Advanced prostate cancer</li>
+						<li>Life expectancy > 6 months</li>
+						<li>Karnofsky Performance Scale &ge; 60</li>
+						<li>Understands English</li>
+					</ul>
+					<p class="slide-content">Exclusion:</p>
+					<ul class="eighty-five">
+						<li>Severe psychiatric issues</li>
+						<li>Prior malignancy within 3 years</li>
+					</ul>
+				</div>
 				<!-- <p class="slide-content">Ongoing at Johns Hopkins, University of Virginia, and Virginia Commonwealth University<p> -->
 				<!-- <div position="absolute" right="0%" top="5%"> -->
-					<svg viewBox="0 0 513 739" style="height: 600px">
+					<svg viewBox="0 0 513 650" style="height: 580px; position: absolute;top: 15%; left: 58%">
 						<use xlink:href="#champion-flow"></use>
 					</svg>
 				<!-- </div> -->
@@ -9343,7 +9355,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-						<p id="outline-progress" class="outline-indicator">Research stratgey and analysis plan</p>
+						<p id="outline-progress" class="outline-indicator">Research strategy</p>
 					</div>
 					<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 						<param name="src" value="resources/university.shield.large.white.svg">
@@ -9365,7 +9377,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-						<p id="outline-progress" class="outline-indicator">Research stratgey and analysis plan</p>
+						<p id="outline-progress" class="outline-indicator">Research strategy</p>
 					</div>
 					<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 						<param name="src" value="resources/university.shield.large.white.svg">
@@ -9396,7 +9408,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-						<p id="outline-progress" class="outline-indicator">Research stratgey and analysis plan</p>
+						<p id="outline-progress" class="outline-indicator">Research strategy</p>
 					</div>
 					<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 						<param name="src" value="resources/university.shield.large.white.svg">
@@ -9424,7 +9436,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-						<p id="outline-progress" class="outline-indicator">Research stratgey and analysis plan</p>
+						<p id="outline-progress" class="outline-indicator">Research strategy</p>
 					</div>
 					<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 						<param name="src" value="resources/university.shield.large.white.svg">
@@ -9449,7 +9461,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-						<p id="outline-progress" class="outline-indicator">Research stratgey and analysis plan</p>
+						<p id="outline-progress" class="outline-indicator">Research strategy</p>
 					</div>
 					<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 						<param name="src" value="resources/university.shield.large.white.svg">p
@@ -9496,7 +9508,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-						<p id="outline-progress" class="outline-indicator">Research stratgey and analysis plan</p>
+						<p id="outline-progress" class="outline-indicator">Research strategy</p>
 					</div>
 					<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 						<param name="src" value="resources/university.shield.large.white.svg">
@@ -9544,7 +9556,7 @@ Copyright (c) 2020, Winter Maxwell Thayer. All rights reserved
 				<div id="section-header" class="head">
 					<div id="header-left" class="header-left">
 						<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-						<p id="outline-progress" class="outline-indicator">Research stratgey and analysis plan</p>
+						<p id="outline-progress" class="outline-indicator">Research strategy</p>
 					</div>
 					<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 						<param name="src" value="resources/university.shield.large.white.svg">
